infra/weather_app_manifests/deployment-blue.yaml
appapiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app-blue
  namespace: weather-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-app
      version: blue
  template:
    metadata:
      labels:
        app: weather-app
        version: blue
    spec:
      containers:
      - name: weather-app
        image: BLUE_IMAGE_TAG  # Ten tag będziemy aktualizować później
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
