infra/weather_app_manifests/ingress-green-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-app-green-test
  namespace: weather-app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Path-specific rewrite for the /green path
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/green(/|$)(.*) /$2 break;
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - http:
      paths:
      - backend:
          service:
            name: weather-app-green-test
            port:
              number: 80
        path: /green
        pathType: Prefix
      - backend:
          service:
            name: weather-app-blue-green
            port:
              number: 80
        path: /
        pathType: Prefix
